debug, small changes in the instructions

--- a/coopetition_quiz/templates/coopetition_quiz/Examples_template.html
+++ b/coopetition_quiz/templates/coopetition_quiz/Examples_template.html
@@ -29,8 +29,8 @@
             Suppose you put 10 points in the Investment Account (\(x_1=10,y_1=0\)),
             and the other participant put 9 points in it and 1 point in the Rationing Account (\(x_2=9,y_2=1\)),
             the total return is 10×9=90 points.
-            Because the other participant has all the points in the Rationing Account, he obtains all the total return. In this case, his
-            final earnings is 90 points, while your earnings is 0 point.
+            Because all the points in the Rationing Account come from the other participant, he receives all the 90 points,
+            while you earn nothing.
         </li>
     </ul>
 
@@ -117,8 +117,8 @@
             Suppose you put 10 points in the Investment Account (\(x_1=10,y_1=0\)),
             and the other participant put 9 points in it and 1 point in the Rationing Account (\(x_2=9,y_2=1\)),
             the total return is 10×9+60=150 points.
-            Because the other participant has all the points in the Rationing Account, he obtains all the total return. In this case, his
-            final earnings is 150 points, while your earnings is 0 point.
+            Because all the points in the Rationing Account come from the other participant, he receives all the 150 points,
+            while you earn nothing.
         </li>
     </ul>
     <br/>
@@ -198,8 +198,8 @@
             Suppose you put 10 points in the Investment Account (\(x_1=10,y_1=0\)),
             and the other participant put 9 points in it and 1 point in the Rationing Account (\(x_2=9,y_2=1\)),
             the total return is 2×10×9=180 points if the investment is successful.
-            Because the other participant has all the points in the Rationing Account, he obtains all the total return. In this case, his
-            final earnings is 180 points, while your earnings is 0 point.
+            Because all the points in the Rationing Account come from the other participant, he receives all the 180 points,
+            while you earn nothing.
         </li>
         <li>
             Of course, if the investment is unsuccessful, all the points put in the Investment Account are wasted. If you are
@@ -309,8 +309,8 @@
             Suppose you put 10 points in the Investment Account (\(x_1=10,y_1=0\)),
             and the other participant put 9 points in it and 1 point in the Rationing Account (\(x_2=9,y_2=1\)),
             the total return is 2×10×9+60=240 points if the investment is successful.
-            Because the other participant has all the points in the Rationing Account, he obtains all the total return. In this case, his
-            final earnings is 240 points, while your earnings is 0 point.
+            Because all the points in the Rationing Account come from the other participant, he receives all the 240 points,
+            while you earn nothing.
         </li>
         <li>
             Of course, if the investment is unsuccessful, all the points put in the Investment Account are wasted.
