--- a/coopetition_quiz/templates/coopetition_quiz/Instructions.html
+++ b/coopetition_quiz/templates/coopetition_quiz/Instructions.html
@@ -103,7 +103,7 @@ Instructions: Part 1
             $$ \text{Your share of the total return} =  \frac{y_1}{y_1 + y_2} $$
             <p>
                 For example, if you put 6 points in the Rationing Account while the other puts 4 points (\(y_1=6,y_2=4\)), because 60% of all the points
-                are yours, you will receive 60% of the Total Return. If you put 5 points and the other also put 5 points (\(y_1=5,y_2=5\)), then
+                are yours, you will receive 60% of the Total Return. If you put 5 points and the other also put 5 points in the Rationing Account (\(y_1=5,y_2=5\)), then
                 you receive 50% of the Total Return.
             </p>
             <p>
@@ -156,7 +156,7 @@ Instructions: Part 1
             $$ \text{Your share of the total return} =  \frac{y_1}{y_1 + y_2} $$
             <p>
                 For example, if you put 6 points in the Rationing Account while the other puts 4 points (\(y_1=6,y_2=4\)), because 60% of all the points
-                are yours, you will receive 60% of the Total Return. If you put 5 points and the other also put 5 points (\(y_1=5,y_2=5\)), then
+                are yours, you will receive 60% of the Total Return. If you put 5 points and the other also put 5 points in the Rationing Account (\(y_1=5,y_2=5\)), then
                 you receive 50% of the Total Return.
             </p>
             <p>
