--- a/coopetition_quiz/templates/coopetition_quiz/Examples_template.html
+++ b/coopetition_quiz/templates/coopetition_quiz/Examples_template.html
@@ -38,13 +38,13 @@
     <strong><u>Example 2:</u></strong> The investment is profitable only if both of you put points in the Investment Account.
     <ul>
         <li>
-            If you put 6 points while the other put 6 points (\(x_1=6,x_2=6\)), the total return is 6x6 = 36 points.
+            If you put 6 points while the other puts 6 points (\(x_1=6,x_2=6\)), the total return is 6x6 = 36 points.
         </li>
         <li>
             If you put 6 points in the Investment Account while the other puts 0 point (\(x_1=6,x_2=0\)),
             the total return is only 6x0= 0, the same as when you invest nothing in it.
         <li>
-            Therefore, putting many points in the Investment Account is a waste if the other put few. If you are not sure that
+            Therefore, putting many points in the Investment Account is a waste if the other puts few. If you are not sure that
             the other will put points in the Investment Account, a safe option is to keep your points for yourself.
         </li>
     </ul>
@@ -126,13 +126,13 @@
         <strong><u>Example 2:</u></strong> The investment is profitable only if both of you put points in the Investment Account.
     <ul>
         <li>
-            If you put 6 points while the other put 6 points (\(x_1=6,x_2=6\)), the total return is 6x6+60 = 96 points.
+            If you put 6 points while the other puts 6 points (\(x_1=6,x_2=6\)), the total return is 6x6+60 = 96 points.
         </li>
         <li>
             If you put 6 points in the Investment Account while the other puts 0 point (\(x_1=6,x_2=0\)),
             the total return is only 6×0+60= 60, the same as when you invest nothing in it.
         <li>
-            Therefore, putting many points in the Investment Account is a waste if the other put few. If you are not sure that
+            Therefore, putting many points in the Investment Account is a waste if the other puts few. If you are not sure that
             the other will put points in the Investment Account, a safe option is to keep your points for yourself.
         </li>
     </ul>
@@ -213,14 +213,14 @@
     <strong><u>Example 2:</u></strong> The investment is profitable only if both of you put points in the Investment Account.
     <ul>
         <li>
-            If you put 6 points while the other put 6 points (\(x_1=6,x_2=6\)), the total return is 2×6×6 = 72 points for
+            If you put 6 points while the other puts 6 points (\(x_1=6,x_2=6\)), the total return is 2×6×6 = 72 points for
             a successful investment.
         </li>
         <li>
             If you put 6 points in the Investment Account while the other puts 0 point (\(x_1=6,x_2=0\)),
             the total return is only 2×16×0= 0, the same as when you invest nothing in it.
         <li>
-            Therefore, putting many points in the Investment Account is a waste if the other put few. If you are not sure that
+            Therefore, putting many points in the Investment Account is a waste if the other puts few. If you are not sure that
             the other will put points in the Investment Account, a safe option is to keep your points for yourself.
         </li>
     </ul>
@@ -322,14 +322,14 @@
     <strong><u>Example 2:</u></strong> The investment is profitable only if both of you put points in the Investment Account.
     <ul>
         <li>
-            If you put 6 points while the other put 6 points (\(x_1=6,x_2=6\)), the total return is 2×6×6 + 60= 132 points for
+            If you put 6 points while the other puts 6 points (\(x_1=6,x_2=6\)), the total return is 2×6×6 + 60= 132 points for
             a successful investment.
         </li>
         <li>
             If you put 6 points in the Investment Account while the other puts 0 point (\(x_1=6,x_2=0\)),
             the total return is only 2×16×0 + 60= 60, the same as when you invest nothing in it.
         <li>
-            Therefore, putting many points in the Investment Account is a waste if the other put few. If you are not sure that
+            Therefore, putting many points in the Investment Account is a waste if the other puts few. If you are not sure that
             the other will put points in the Investment Account, a safe option is to keep your points for yourself.
         </li>
     </ul>
